--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -22,7 +22,7 @@
         <div class="footer__inner_item">
             <div class="phone">
                 <a href="tel:88612070727" class="link">8 (861) 207-07-27</a>
-                <a href="#" class="sublink">Перезвоните мне</a>
+                <a href="#" class="sublink" id="pop_open">Перезвоните мне</a>
             </div>
         </div>
         <div class="footer__inner_item">
