--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -16,7 +16,7 @@
        </div>
         <div class="header__inner_right">
             <a href="tel:88612070727" class="link">8 (861) 207-07-27</a>
-            <a href="#" class="sublink">Перезвоните мне</a>
+            <a href="#" class="sublink pop_open">Перезвоните мне</a>
         </div>
     </div>
 </header>
