--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="youtube_btn"><a href="#"><img src="img/yt.svg" alt=""></a></div>
             </div>
-            <div class="btn_main mobile"><button class="btn">Записаться на консультацию</button></div>
+            <div class="btn_main mobile"><button class="btn" id="pop_open">Записаться на консультацию</button></div>
 
         </div>
         <div class="page__inner">
@@ -466,12 +466,10 @@
                 </div>
             </div>
         </div>
-
-
-
     </main>
     //= html/_footer.html
     //= html/_menu.html
+    //= html/_popup.html
 </div>
 //= html/_scripts.html
 </body>
